--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".helper"></activity>
+        <activity android:name=".QuestionActivity" />
+        <activity android:name=".HelpActivity" />
         <activity android:name=".login" />
         <activity android:name=".register" />
         <activity android:name=".QueryResults" />
