Changed name of Activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,10 @@
         android:theme="@style/AppTheme">
         <activity android:name=".QuestionActivity" />
         <activity android:name=".HelpActivity" />
-        <activity android:name=".login" />
-        <activity android:name=".register" />
-        <activity android:name=".QueryResults" />
-        <activity android:name=".MovieList" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".QueryResultsActivity" />
+        <activity android:name=".MovieListActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
